<!--
     Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">DMovies</string>
    <string name="textview">TextView</string>

    <string name="Top_rated">Top Rated</string>
    <string name="Popular">Popular</string>
    <string name="Favorite">Favorite</string>
    <string name="About">About</string>
    <string name="trailers">Trailers:</string>
    <string name="cardview">CardView</string>
    <string name="year">Year</string>
    <string name="lang">lang</string>
    <string name="rating">Rating :</string>
    <string name="description">Description</string>
    <string name="release_date">Release Date :</string>
    <string name="language">Language :</string>
    <string name="_10">/ 10</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="review">Review</string>

</resources>
