<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dcs"
                android:layout_marginStart="@dimen/dew"
                android:layout_marginTop="@dimen/az"
                android:text="@string/trailers"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.025"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deskripsi" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/acrg"
                android:text="@string/year"
                android:textAllCaps="true"
                android:textColor="@color/text"
                android:textSize="@dimen/dcwe"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintLeft_toRightOf="@+id/poster"
                android:layout_marginStart="@dimen/awdv"
                android:layout_marginEnd="@dimen/bvtr"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />

            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:padding="@dimen/ceaxd"
                android:textSize="@dimen/daca"
                android:background="@color/text"
                android:textColor="@color/white"
                android:text="@string/textview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />
            <ImageView
                android:id="@+id/poster"
                android:layout_width="173dp"
                android:layout_height="213dp"
                app:srcCompat="@mipmap/ic_launcher"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/awdve"
                app:layout_constraintRight_toLeftOf="@+id/textView4"
                android:layout_marginStart="@dimen/dawcv"
                android:layout_marginEnd="@dimen/dcvr"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />

            <TextView
                android:id="@+id/durasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/drtt"
                android:text="@string/lang"
                android:textAllCaps="true"
                android:textColor="@color/text"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:layout_marginStart="@dimen/advt"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/textView2"
                android:layout_marginEnd="@dimen/vtg"
                app:layout_constraintHorizontal_bias="0.54" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/rvgtb"
                android:layout_marginTop="@dimen/srvs"
                android:text="@string/rating"
                android:textColor="@color/text"
                android:textStyle="italic"
                app:layout_constraintLeft_toRightOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:layout_marginEnd="@dimen/gdtrgv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />

            <TextView
                android:id="@+id/deskripsi"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="@dimen/gdrg"
                android:text="@string/description"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@+id/poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/sfv"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="@dimen/sefbvfrtg"
                app:layout_constraintLeft_toLeftOf="parent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerviewtrailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gdrvf"
                android:layout_marginTop="@dimen/sdrg"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                android:layout_marginEnd="@dimen/seui"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ofse"
                android:layout_marginTop="@dimen/isef"
                android:text="@string/release_date"
                android:textStyle="italic"
                app:layout_constraintLeft_toRightOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:layout_marginEnd="@dimen/usl"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.068" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ksefn"
                android:layout_marginTop="@dimen/nisef"
                android:text="@string/language"
                app:layout_constraintLeft_toRightOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:layout_marginEnd="@dimen/ksef"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ksefn"
                android:layout_marginTop="@dimen/sebf"
                android:text="@string/rating"
                app:layout_constraintLeft_toRightOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:layout_marginEnd="@dimen/jdawk"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fcre"
                android:layout_marginEnd="@dimen/veds"
                android:layout_marginTop="@dimen/adcv"
                android:text="@string/_10"
                android:textColor="@color/text"
                android:textStyle="italic"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/rating"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <ImageButton
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_star_border_black_24dp"
                app:layout_constraintLeft_toRightOf="@+id/poster"
                android:layout_marginStart="@dimen/sfcsd"
                android:layout_marginEnd="@dimen/fhsef"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_favorite"
                app:layout_constraintLeft_toRightOf="@+id/button"
                android:layout_marginStart="@dimen/awghd"
                android:layout_marginEnd="@dimen/whd"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="@dimen/hawd"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="19dp"
                android:text="@string/review"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintHorizontal_bias="0.025"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerviewtrailer"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/eviewxxxX"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gdrvf"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="@dimen/seui"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.024">
            </android.support.v7.widget.RecyclerView>

        </android.support.constraint.ConstraintLayout>
</ScrollView>
